# si-kkachie-be

./: .env.example  .env.test  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: SESSION.md  settings.json
.claude/agents/: logic-code-generator.md  phase-5-reviewer.md  render-autofix.md  render-deploy-monitor.md  render-log-analyzer.md  test-code-generator.md
.claude/config/: auto-fix-policy.yml  lint-rules.yml
.claude/hooks/: on-file-created.sh  on-phase-complete.sh
.claude/hooks/linters/: run-all.sh  run-python.sh
.claude/plugins/project-bootstrap/: README.md
.claude/plugins/render-autofix/: README.md  marketplace.json
.claude/refactor-prompts/: 00-health.md  01-locations.md  02-routes.md  03-phrases.md  04-translations.md  05-missions.md  06-profiles.md  README.md
.claude/skills/clarify/: SKILL.md
.claude/skills/create-module/: SKILL.md
.claude/skills/deep-research/: SKILL.md
.claude/skills/finalize-implementation/: examples.md
.claude/skills/guard/: SKILL.md
.claude/skills/interview-requirements/: SKILL.md
.claude/skills/render-autofix/: SKILL.md
.claude/skills/run-migration/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/tdd-workflow/: SKILL.md  examples.md
.claude/skills/verification-loop/: SKILL.md
.claude/skills/write-spec/: SKILL.md
.claude/templates/: session-initial.md.template
.claude/templates/module/: models.py.template
.claude/visualizer/: .gitignore
docs/: CHANGELOG-2025-01-24-workflow-upgrade.md  DDD_CLASS_DIAGRAM.md  GUIDELINES.md  PRD.md  SPEC.md  TRANSLATION_ARCHITECTURE.md  TRD.md
docs/user_flows/: 01-auth-profile.md  02-translations.md  03-missions.md  04-phrases.md  05-routes.md  06-api-reference.md  07-error-handling.md  README.md
migrations/: env.py
migrations/versions/: 4b5c6a12bd75_add_domain_tables.py  59725ea892a8_add_translation_thread_and_category_.py  b5d7e3f4a891_fix_fk_constraints.py  c6e8f4a5b902_add_uuid_v7_function.py  d7f9g5h6c013_add_postgis_geography.py
scripts/: supabase_local_env.py  verify-architecture.sh
src/app/: main.py
src/core/: config.py  database.py  deps.py  enums.py  exceptions.py  response.py
src/modules/health/: __init__.py  controller.py  health.py  ready.py
src/modules/locations/: __init__.py  _parsers.py  _utils.py  reverse_geocode.py  search.py  search_category.py
src/modules/missions/: __init__.py  _repository.py  controller.py  detail.py  end.py  entities.py  list.py  models.py  progress.py  repository.py  service.py  start.py
src/modules/phrases/: __init__.py  _models.py  _repository.py  controller.py  entities.py  list.py  models.py  repository.py  service.py  use.py
src/modules/profiles/: __init__.py  _repository.py  _storage.py  controller.py  delete_me.py  entities.py  get_me.py  models.py  profile_image.py  repository.py  service.py  update_me.py  verify_token.py
src/modules/routes/: __init__.py  _models.py  _repository.py  _utils.py  controller.py  (+7 more)
supabase/: .env.local.example  config.toml
tests/: conftest.py
(+114 files in other folders)
